--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 pluginGroup=com.darwinreforged
-pluginId=servermodifications
-pluginVersion=0.1.1-alpha
+pluginId=darwinserver
+pluginVersion=aabf015-alpha
