--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,33 @@
 buildscript {
     repositories {
-        maven {
-            url = 'https://files.minecraftforge.net/maven'
-        }
         jcenter()
+        maven {
+            name = 'forge'
+            url = 'http://files.minecraftforge.net/maven'
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+        classpath "com.github.jengelman.gradle.plugins:shadow:4.0.4"
     }
 }
 
 plugins {
-    id 'org.spongepowered.plugin' version '0.9.0'
-    id 'net.minecrell.vanillagradle.server' version '2.2-6'
-    id 'com.github.johnrengelman.shadow' version '1.2.4'
+    id 'org.spongepowered.plugin' version '0.8.1'
+    id 'maven'
 }
-apply plugin: 'eclipse'
 
-group = 'com.darwinreforged'
-version = '0.1.1-alpha'
-description = 'Common source for several Darwin Reforged plugins'
+apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: 'net.minecraftforge.gradle.forge'
+
+archivesBaseName = 'DarwinServer'
+version = '0.1.7-alpha'
+group = 'com.darwinreforged.server'
+description = 'Common sources for Darwin Server plugins'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -34,39 +40,64 @@ configurations {
 }
 
 repositories {
-    maven { url "https://repo.maven.apache.org/maven2" }
-    maven { url 'https://jitpack.io' }
-    maven { url "https://mvnrepository.com/artifact/org.projectlombok/lombok" }
-    maven { url "https://repo.spongepowered.org/maven" }
-    maven { url 'https://ci.athion.net/job/FastAsyncWorldEdit/ws/mvn' }
-    maven { url 'https://maven.sk89q.com/repo/' }
-    maven { url 'http://repo.drnaylor.co.uk/artifactory/list/minecraft' }
-    jcenter()
-    mavenCentral()
+    maven {
+        name 'sponge'
+        url 'http://repo.spongepowered.org/maven'
+    }
+    maven {
+        name 'fastasyncworldedit'
+        url 'https://ci.athion.net/job/FastAsyncWorldEdit/ws/mvn'
+    }
+    maven {
+        name 'sk89q'
+        url 'https://maven.sk89q.com/repo/'
+    }
+    maven {
+        name 'jitpack'
+        url 'https://jitpack.io'
+    }
     maven {
         url 'https://repo.codemc.org/repository/maven-public'
     }
+    maven {
+        name 'shadow'
+        url 'http://repo.drnaylor.co.uk/artifactory/list/minecraft'
+    }
+    maven {
+        name 'lombok'
+        url "https://mvnrepository.com/artifact/org.projectlombok/lombok"
+    }
+    jcenter()
+    mavenCentral()
+}
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
+dependencies {
+    compileOnly 'com.google.guava:guava:23.0'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.0'
+    compileOnly 'com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT'
+    compileOnly 'com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT'
+    compile 'org.spongepowered:spongeapi:7.1.0-SNAPSHOT'
+    compile 'com.boydti:fawe-api:latest'
+    compile 'com.github.SimonFlash.TeslaPowered:TeslaLibs:1.1.6'
+    compile 'com.zaxxer:HikariCP:3.1.0'
+    shadow group: 'org.reflections', name: 'reflections', version: '0.9.12'
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 minecraft {
-    version = '1.12.2'
-    mappings = 'stable_39'
+    version = "1.12.2-14.23.5.2847"
+    mappings = "snapshot_20171003"
     runDir = 'run'
 }
 
-dependencies {
-    implementation 'com.google.guava:guava:23.0'
-    annotationProcessor 'org.spongepowered:spongeapi:7.1.0'
-    compileOnly 'org.spongepowered:spongeapi:7.1.0'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.0'
-    compileOnly("com.sk89q.worldedit:worldedit-core:6.1.4-SNAPSHOT") { transitive = false }
-    compileOnly("com.sk89q.worldedit:worldedit-sponge:6.1.7-SNAPSHOT")
-    compile 'com.boydti:fawe-api:latest'
-    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.1.0'
-    compile 'com.github.rojo8399:PlaceholderAPI:master-SNAPSHOT'
-    compile "com.github.SimonFlash.TeslaPowered:TeslaLibs:1.1.6"
-    compile fileTree(dir: 'libs', include: '*.jar')
-    shadow group: 'org.reflections', name: 'reflections', version: '0.9.12'
+jar {
+    manifest.attributes(
+            'FMLAT': 'darwin_at.cfg',
+            'ForceLoadAsMod': true
+    )
 }
 
 jar.enabled = false
@@ -76,5 +107,3 @@ shadowJar {
     configurations = [project.configurations.shadow]
     classifier = null
 }
-
-sponge.plugin.id = pluginId
