--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 archivesBaseName = 'DarwinServer'
-version = '0.1.7-alpha'
+version = 'ad3551d-alpha'
 group = 'com.darwinreforged.server'
 description = 'Common sources for Darwin Server plugins'
 
