--- a/mcp/build.gradle
+++ b/mcp/build.gradle
@@ -33,6 +33,10 @@ repositories {
 
 dependencies {
     compileOnly files('../common_libs/PacketGate-0.1.2.jar')
+    compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    shadow group: 'org.reflections', name: 'reflections', version: '0.9.12'
+    shadow 'com.google.dagger:dagger:2.27'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.27'
 }
 
 processResources {
