--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ buildscript {
     }
 }
 
+archivesBaseName = 'DarwinServer'
+version = project.pluginVersion
+group = project.pluginGroup
+description = 'Common sources for Darwin Server plugins'
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven'
