--- a/modules/build.gradle
+++ b/modules/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'org.spongepowered.plugin' version '0.9.0'
 }
 
+archivesBaseName = 'DarwinServer Modules'
+version = project.pluginVersion
+group = project.pluginGroup
+description = 'Functional modules to be wrapped using the DarwinServer plugin'
+
 repositories {
     maven {
         name 'fastasyncworldedit'
