Fix CommandUtils creating instance of DarwinServer, add sources to Modules. Create modDir on request, pass events into startup

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,12 @@ after_failure:
 
 jobs:
   include:
-    - stage: 1_prepare_mcp
-      name: "Prepare MCP workspace"
-      script: gradle setupCiWorkspace -p ForgeMCP
-    - stage: 2_build_core
+    - stage: 1_build_core
       name: "Build Core"
       script: gradle build -p Core
-    - stage: 3_build_sponge
+    - stage: 2_build_sponge
       name: "Build Sponge implementation"
       script: gradle build -p Sponge
-# Disabled until reworked
-#    - stage: 4_build_modules
-#      name: "Build internal modules"
-#      script: gradle build -p Modules
+    - stage: 3_build_combined
+      name: "Build all projects"
+      script: gradle build
