Replace plugin.properties with darwin.properties to prevent resource conflict with PlotSquared

--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
 processResources {
     from('src/main/resources') {
-        include 'plugin.properties'
+        include 'darwin.properties'
         expand(
                 version: "$project.version",
                 last_update: "${date}"
