--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,11 @@ subprojects { Project subProject ->
     targetCompatibility = '1.8'
 
     tasks.build.dependsOn tasks.shadowJar
+
+    shadowJar {
+        relocate 'com.fasterxml.jackson', 'com.darwinreforged.internal.jackson'
+        relocate 'org.apache.commons', 'com.darwinreforged.internal.apache.commons'
+    }
 }
 
 allprojects {
