--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -21,6 +21,10 @@ repositories {
         name 'fawe'
         url 'http://ci.athion.net/job/FastAsyncWorldEdit/ws/mvn/'
     }
+    maven {
+        name 'sk89q'
+        url 'https://maven.enginehub.org/repo/'
+    }
 }
 
 archivesBaseName = 'core'
@@ -38,6 +42,7 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.1'
     compileOnly 'com.google.guava:guava:21.0'
     compileOnly 'com.boydti:fawe-api:latest'
+    compileOnly 'com.sk89q.worldedit:worldedit-core:6.1'
     compile 'org.slf4j:slf4j-api:1.7.25'
     testCompile 'junit:junit:4.12'
     implementation 'com.j256.ormlite:ormlite-core:5.1'
