--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compileOnly 'com.sk89q.worldedit:worldedit-core:6.1'
     compile 'org.slf4j:slf4j-api:1.7.25'
     testCompile 'junit:junit:4.12'
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.j256.ormlite:ormlite-core:5.1'
     implementation 'com.j256.ormlite:ormlite-jdbc:5.1'
 }
