--- a/build.gradle
+++ b/build.gradle
@@ -42,16 +42,6 @@ subprojects { Project subProject ->
                         includes: "*.jar"
             }
 
-            def DOCS_DEST_DIR = "${rootDir}/docs"
-            def DOCS_SRC_DIR = "${buildDir}/docs/javadoc"
-
-            delete DOCS_DEST_DIR // Remove old JavaDocs
-
-            ant.mkdir(dir: DOCS_DEST_DIR)
-            ant.copy(todir: DOCS_DEST_DIR) {
-                fileset dir: DOCS_SRC_DIR
-            }
-
             delete buildDir
         }
     }
@@ -95,7 +85,7 @@ allprojects {
 
 task aggregatedJavadocs(type: Javadoc, description: 'Generate javadocs from all child projects as if it was a single project', group: 'Documentation') {
     destinationDir = file("./docs")
-    title = "$project.name $version API"
+    title = "DarwinServer (commit #$version)"
     options.author true
     options.links 'http://docs.spring.io/spring/docs/4.3.x/javadoc-api/', 'http://docs.oracle.com/javase/8/docs/api/', 'http://docs.spring.io/spring-ws/docs/2.3.0.RELEASE/api/', 'http://docs.spring.io/spring-security/site/docs/4.0.4.RELEASE/apidocs/'
     options.addStringOption('Xdoclint:none', '-quiet')
