--- a/Sponge/build.gradle
+++ b/Sponge/build.gradle
@@ -6,10 +6,21 @@ archivesBaseName = "darwinserver-sponge"
 group = project.pluginGroup
 description = 'Sponge implementation for Darwin Server modules'
 
+repositories {
+    maven {
+        name 'Nucleus'
+        url 'http://repo.drnaylor.co.uk/artifactory/list/minecraft'
+    }
+}
+
 dependencies {
     compile project(path: ':Core', configuration: 'shadow')
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
+    compileOnly 'me.lucko.luckperms:luckperms-api:4.4'
     compileOnly 'org.spongepowered:spongeapi:7.1.0'
+    compileOnly 'com.github.Eufranio:MagiBridge:2.10'
+    compileOnly 'com.github.MultiChat:Development:1.8.1'
+    compileOnly 'io.github.nucleuspowered:nucleus-api:1.14.3-SNAPSHOT-S7.1'
 }
 
 sponge.plugin.id = pluginId
