--- a/extensions/build.gradle
+++ b/extensions/build.gradle
@@ -25,5 +25,5 @@ description = 'Integrated extensions for Selene'
 
 dependencies {
     compileOnly project(':selene-core')
-    compileOnly project(':selene-commons')
+    compileOnly project(':selene-common')
 }
