--- a/selene-common/build.gradle
+++ b/selene-common/build.gradle
@@ -35,5 +35,10 @@ dependencies {
         shadow 'org.apache.commons:commons-collections4:4.1'
 
         testImplementation 'junit:junit:4.12'
+        testImplementation project(':selene-core')
     }
+}
+
+test {
+    useJUnitPlatform()
 }
