Make JUnit globally defined

--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,10 @@ allprojects {
             testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 
         }
+
+        test {
+            useJUnitPlatform()
+        }
     }
 }
 
