--- a/selene-common/build.gradle
+++ b/selene-common/build.gradle
@@ -22,6 +22,7 @@ plugins {
 
 group = 'org.dockbox.selene.core.impl'
 description = 'Default implementations for Selene'
+def configurateVersion = "3.6.1"
 
 dependencies {
     compileOnly project(':selene-core')
@@ -31,14 +32,14 @@ dependencies {
         shadow 'org.reflections:reflections:0.9.11'
         shadow 'org.apache.commons:commons-collections4:4.1'
 
-        compileOnly 'org.spongepowered:configurate-hocon:3.7.1'
-        compileOnly 'org.spongepowered:configurate-yaml:3.7.1'
-        compileOnly 'org.spongepowered:configurate-json:3.7.1'
-        compileOnly 'org.spongepowered:configurate-gson:3.7.1'
-        compileOnly 'org.spongepowered:configurate-xml:3.7.1'
+        compileOnly "org.spongepowered:configurate-hocon:$configurateVersion"
+        compileOnly "org.spongepowered:configurate-yaml:$configurateVersion"
+        compileOnly "org.spongepowered:configurate-json:$configurateVersion"
+        compileOnly "org.spongepowered:configurate-gson:$configurateVersion"
+        compileOnly "org.spongepowered:configurate-xml:$configurateVersion"
 
         testImplementation 'junit:junit:4.12'
-        testImplementation 'org.spongepowered:configurate-core:3.7.1'
+        testImplementation "org.spongepowered:configurate-core:$configurateVersion"
         testImplementation project(':selene-core')
     }
 }
